Sansam/Grammar.txt
statements      : NewLine* expr(NewLine + expr)* NewLine*

expr            : IDENTIFIER EQU expr
                : comp-expr((KEYWORD:'वा'|KEYWORD:'च') comp-expr)*

comp_expr       : (KEYWORD:'न'| NOT) comp-expr
                : arith-expr ((ISEQ|ISNEQ|ISG|ISL|ISGEQ|ISLEQ) arith-expr)*

arith_expr      : term ((PLUS|MINUS) term)*

term            : factor ((MUL|DIV|MOD) factor)*

factor          : (PLUS|MINUS) factor
                : power

power           : atom (POW factor)*

factorial       : atom (factor)

atom            : INT|FLOAT|STRING|IDENTIFIER
                : LPAREN expr RPAREN
                : list-expr

list-expr       : LSQUARE (expr (COMMA expr)*)? RSQUARE
